<resources>
    <plurals name="found_instances">
        <item quantity="one">We found %1$d Home Assistant on your network.</item>
        <item quantity="other">We found %1$d Home Assistants on your network.</item>
    </plurals>
    <string name="app_name">Home Assistant</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="welcome_onboarding">Welcome To Home Assistant Companion</string>
    <string name="subheading_onboarding">The most advanced Home Automation app on Android</string>
    <string name="wifi_onboarding">To continue with automatic setup, please connect to your home Wi-Fi network</string>
    <string name="continue_btn">Continue</string>
    <string name="scanning_title">Scanning your network for Home Assistant</string>

    <string name="enter_address_manually">Enter Address Manually</string>

    <string name="manual_configure_msg">Please enter your Home Assistant URL to continue.
        It must be a fully formed URL of the format "http://hassio.local:8123"
        (that is, containing a scheme/protocol, hostname and port).</string>
    <string name="manual_configuration_header">Manual Configuration</string>
    <string name="connect">Connect</string>

    <string name="authentication">Authentication</string>
    <string name="auth_explanation">We are now ready to connect to your Home Assistant and do the initial authentication. Tapping the Connect button will cause a browser to open for you to log in to.</string>
    <string name="start_over">Start Over</string>
</resources>
