<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/defaultPadding"
    tools:context=".onboarding.OnboardingFragment">

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/subheading_onboarding"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/wifi"
        app:layout_constraintEnd_toStartOf="@+id/verticalRight"
        app:layout_constraintStart_toStartOf="@+id/veritcalLeft"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <TextView
        android:id="@+id/wifi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/wifi_onboarding"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        android:alpha=".5"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/verticalRight"
        app:layout_constraintStart_toStartOf="@+id/veritcalLeft"
        app:layout_constraintTop_toBottomOf="@+id/subText" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/welcome_onboarding"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/subText"
        app:layout_constraintEnd_toStartOf="@+id/verticalRight"
        app:layout_constraintStart_toStartOf="@+id/veritcalLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/veritcalLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="1dp"
        app:layout_constraintGuide_percent=".9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>